--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "https://github.com/caganseyrek/tarihsever.com.git"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -40,17 +40,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "husky": "^9.1.7",
-    "lucide-react": "^0.485.0",
+    "lucide-react": "^0.486.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "rehype-autolink-headings": "^7.1.0",
-    "rehype-external-links": "^3.0.0",
-    "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "schema-dts": "^1.1.5",
-    "tailwind-merge": "^3.0.2",
+    "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5"
   },
@@ -59,7 +56,7 @@
     "@next/eslint-plugin-next": "^15.2.4",
     "@tailwindcss/postcss": "^4.0.17",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@types/node": "^22.13.14",
+    "@types/node": "^22.13.16",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "depcheck": "^1.4.7",
@@ -74,6 +71,6 @@
     "tailwindcss": "^4.0.17",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.28.0"
+    "typescript-eslint": "^8.29.0"
   }
 }
