--- a/.prettierrc
+++ b/.prettierrc
@@ -18,6 +18,7 @@
     "^(?:[./@]*app)(/.*|$)",
     "^(?:[./@]*components)(/.*|$)",
     "^(?:[./@]*shared)(/.*|$)",
+    "^(?:[./@]*resources)(/.*|$)",
     "^(?:[./@]*prepublish)(/.*|$)",
     "^(?:[./@]*types)(/.*|$)",
     "^(?:[./@]*)(/.*|$)",
