--- a/.prettierrc
+++ b/.prettierrc
@@ -19,7 +19,7 @@
     "^(?:[./@]*components)(/.*|$)",
     "^(?:[./@]*shared)(/.*|$)",
     "^(?:[./@]*resources)(/.*|$)",
-    "^(?:[./@]*prepublish)(/.*|$)",
+    "^(?:[./@]*workflows)(/.*|$)",
     "^(?:[./@]*types)(/.*|$)",
     "^(?:[./@]*)(/.*|$)",
     "^[./]"
