--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dev:turbopack": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "typecheck": "tsc --noEmit",
     "lint": "next lint",
     "format:check": "prettier --check .",
     "format:write": "prettier --write .",
@@ -49,7 +50,6 @@
     "schema-dts": "^1.1.5",
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "title": "^4.0.1",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
@@ -69,7 +69,7 @@
     "lint-staged": "^15.5.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
-    "tailwindcss": "^4.0.17",
+    "tailwindcss": "^4.1.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.29.0"
