--- a/.prettierrc
+++ b/.prettierrc
@@ -17,9 +17,9 @@
     "<THIRD_PARTY_MODULES>",
     "^(?:[./@]*app)(/.*|$)",
     "^(?:[./@]*components)(/.*|$)",
+    "^(?:[./@]*content)(/.*|$)",
+    "^(?:[./@]*prepublish)(/.*|$)",
     "^(?:[./@]*shared)(/.*|$)",
-    "^(?:[./@]*resources)(/.*|$)",
-    "^(?:[./@]*workflows)(/.*|$)",
     "^(?:[./@]*types)(/.*|$)",
     "^(?:[./@]*)(/.*|$)",
     "^[./]"
