--- a/.prettierrc
+++ b/.prettierrc
@@ -17,7 +17,7 @@
     "<THIRD_PARTY_MODULES>",
     "^(?:[./@]*app)(/.*|$)",
     "^(?:[./@]*components)(/.*|$)",
-    "^(?:[./@]*content)(/.*|$)",
+    "^(?:[./@]*contents)(/.*|$)",
     "^(?:[./@]*prepublish)(/.*|$)",
     "^(?:[./@]*shared)(/.*|$)",
     "^(?:[./@]*types)(/.*|$)",
