--- a/.prettierrc
+++ b/.prettierrc
@@ -18,6 +18,13 @@
     "^(?:[./@]*app)(/.*|$)",
     "^(?:[./@]*components)(/.*|$)",
     "^(?:[./@]*contents)(/.*|$)",
+    "^(?:[./@]*contents/__generated__)(/.*|$)",
+    "^(?:[./@]*contents/topics)(/.*|$)",
+    "^(?:[./@]*contents/pages)(/.*|$)",
+    "^(?:[./@]*contents/data)(/.*|$)",
+    "^(?:[./@]*prepublish/shared)(/.*|$)",
+    "^(?:[./@]*prepublish/article-processors)(/.*|$)",
+    "^(?:[./@]*prepublish/data-processors)(/.*|$)",
     "^(?:[./@]*prepublish)(/.*|$)",
     "^(?:[./@]*shared)(/.*|$)",
     "^(?:[./@]*types)(/.*|$)",
