--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "tarihsever.com",
-  "version": "1.1.0-alpha",
+  "version": "1.0.0-prerelease",
   "private": true,
+  "type": "module",
   "license": "MIT",
   "author": {
     "name": "Çağan Seyrek",
@@ -20,7 +21,8 @@
     "lint": "next lint",
     "format:check": "prettier --check .",
     "format:write": "prettier --write .",
-    "prepublish": "tsx ./prepublish/workflow.ts"
+    "prepublish:scaffold": "tsx ./prepublish/scaffold-part.ts",
+    "prepublish": "tsx ./prepublish/execute-part.ts"
   },
   "lint-staged": {
     "*": [
@@ -31,47 +33,46 @@
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.2.4",
-    "@radix-ui/react-accordion": "^1.2.3",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@next/mdx": "^15.2.5",
+    "@radix-ui/react-accordion": "^1.2.4",
+    "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "husky": "^9.1.7",
-    "lucide-react": "^0.486.0",
-    "next": "15.2.4",
-    "next-mdx-remote": "^5.0.0",
+    "lucide-react": "^0.487.0",
+    "next": "15.2.5",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "remark-gfm": "^4.0.1",
     "schema-dts": "^1.1.5",
-    "tailwind-merge": "^3.1.0",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
-    "@eslint/js": "^9.23.0",
-    "@next/eslint-plugin-next": "^15.2.4",
-    "@tailwindcss/postcss": "^4.0.17",
+    "@eslint/js": "^9.24.0",
+    "@next/eslint-plugin-next": "^15.2.5",
+    "@tailwindcss/postcss": "^4.1.3",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/mdx": "^2.0.13",
-    "@types/node": "^22.13.16",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4",
+    "@types/node": "^22.14.0",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.2",
     "depcheck": "^1.4.7",
-    "eslint": "^9.23.0",
-    "eslint-config-next": "15.2.4",
+    "eslint": "^9.24.0",
+    "eslint-config-next": "15.2.5",
     "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react": "^7.37.5",
     "globals": "^16.0.0",
     "lint-staged": "^15.5.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
-    "tailwindcss": "^4.1.2",
+    "tailwindcss": "^4.1.3",
     "tsx": "^4.19.3",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.29.0"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.1"
   }
 }
